--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,4 @@
+<!-- app/templates/base.html -->
 <!DOCTYPE html>
 <html lang="vi">
 
@@ -13,7 +14,7 @@
     {% block content %}
     {% endblock %}
 
-    <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
+
     {% block extra_js %}{% endblock %}
 </body>
 
